<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_image_view"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:src="@drawable/fifa_2018_russia"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"/>

    <EditText
        android:id="@+id/register_user_id_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/register_edit_background"
        android:hint="@string/user_id_edit_text_hint"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:textColor="@color/register_edit_text_color"
        android:textColorHint="@color/register_edit_text_hint_color" />

    <EditText
        android:id="@+id/register_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/register_edit_background"
        android:hint="@string/password_edit_text_hint"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:textColor="@color/register_edit_text_color"
        android:inputType="textPassword"
        android:textColorHint="@color/register_edit_text_hint_color" />

    <EditText
        android:id="@+id/register_confirm_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/register_edit_background"
        android:hint="@string/confirm_password_edit_text_hint"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:textColor="@color/register_edit_text_color"
        android:inputType="textPassword"
        android:textColorHint="@color/register_edit_text_hint_color" />

    <EditText
        android:id="@+id/register_legal_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/register_edit_background"
        android:hint="@string/legal_name_edit_text_hint"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:textColor="@color/register_edit_text_color"
        android:inputType="textCapWords"
        android:textColorHint="@color/register_edit_text_hint_color" />

    <TextView
        android:id="@+id/register_error_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="16dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="@color/error_text_color"/>

    <Button
        android:id="@+id/register_submit_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/register_button_background"
        android:text="@string/register_submit_button_text"
        android:textAllCaps="false"
        android:textColor="@color/register_button_text_color" />

</LinearLayout>