<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#BDBDBD">

    <LinearLayout
        android:id="@+id/match_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/team_name_background_color"
        android:orientation="vertical">

        <!-- Team Text Section -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/match_misc_info_background_color"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/match_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/seguisb"
                android:gravity="left"
                android:paddingLeft="4dp"
                android:text="@string/match_type"
                android:textColor="@color/team_name_text_color"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/match_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/seguisb"
                android:gravity="right"
                android:paddingRight="4dp"
                android:text="@string/match_date"
                android:textColor="@color/team_name_text_color"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/match_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/seguisb"
                android:gravity="right"
                android:paddingRight="4dp"
                android:text="@string/match_time"
                android:textColor="@color/team_name_text_color"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/teamA_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/seguisb"
                android:gravity="center"
                android:text="@string/teamA_name"
                android:textColor="@color/team_name_text_color"
                android:textSize="20sp"
                android:background="@color/team_name_background_color"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="@color/text_separator_line" />

            <TextView
                android:id="@+id/teamB_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/seguisb"
                android:gravity="center"
                android:text="@string/teamB_name"
                android:textColor="@color/team_name_text_color"
                android:background="@color/team_name_background_color"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- SCore Section -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@drawable/score_layout_background"
            android:orientation="horizontal">

            <!-- Button Left Layout -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/teamA_increment"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/arrow_up" />

                <Button
                    android:id="@+id/teamA_decrement"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/arrow_up"
                    android:rotation="180" />

            </LinearLayout>

            <!-- Score Team A Layout -->
            <TextView
                android:id="@+id/teamA_score"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/default_score"
                android:textColor="@color/score_light_color"
                android:textSize="32dp"
                android:textStyle="bold" />

            <!-- Save Button Layout -->

            <Button
                android:id="@+id/score_save"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="2"
                android:background="@drawable/save_button_background"
                android:text="@string/save_button_text"
                android:textColor="@color/save_button_text" />

            <!-- Score Team B Layout -->
            <TextView
                android:id="@+id/teamB_score"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/default_score"
                android:textColor="@color/score_light_color"
                android:textSize="32dp"
                android:textStyle="bold" />
            <!-- Button Right Layout -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/teamB_increment"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/arrow_up" />

                <Button
                    android:id="@+id/teamB_decrement"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/arrow_up"
                    android:rotation="180" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>