<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/entire_sign_up_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"
            android:src="@drawable/fifa_2018_russia"/>

        <LinearLayout
            android:id="@+id/logon_edit_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/logon_edit_box_background"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_user_id_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/logon_edit_background"
                android:hint="@string/user_id_edit_text_hint"
                android:paddingBottom="4dp"
                android:paddingLeft="8dp"
                android:textColor="@color/logon_edit_text_color"
                android:textColorHint="@color/logon_edit_text_hint_color" />

            <EditText
                android:id="@+id/login_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/logon_edit_background"
                android:hint="@string/password_edit_text_hint"
                android:paddingBottom="4dp"
                android:paddingLeft="8dp"
                android:textColor="@color/logon_edit_text_color"
                android:inputType="textPassword"
                android:textColorHint="@color/logon_edit_text_hint_color" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/logon_button_background"
                android:text="@string/login_button_text"
                android:textAllCaps="false"
                android:textColor="@color/logon_button_text_color" />
        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_with_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"></com.google.android.gms.common.SignInButton>

        <Button
            android:id="@+id/register_new_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/logon_button_background"
            android:text="@string/register_button_text"
            android:textAllCaps="false"
            android:onClick="onClickRegister"
            android:textColor="@color/logon_button_text_color" />

    </LinearLayout>

</LinearLayout>