<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/history_match_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/team_name_background_color"
        android:orientation="horizontal">

        <!-- Match Info Layout -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="vertical">

            <!-- Match Info Section -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@color/history_match_info_background_color"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/history_match_type"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/seguisb"
                    android:gravity="left"
                    android:paddingLeft="4dp"
                    android:text="@string/match_type"
                    android:textColor="@color/history_team_name_text_color"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/history_match_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/seguisb"
                    android:gravity="right"
                    android:paddingRight="4dp"
                    android:text="@string/match_date"
                    android:textColor="@color/history_team_name_text_color"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/history_internal_line_separator"/>

            <!-- Team Section -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@color/history_team_info_background_color"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/history_teamA_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/history_team_info_background_color"
                    android:fontFamily="@font/seguisb"
                    android:gravity="center"
                    android:text="@string/teamA_name"
                    android:textColor="@color/history_team_name_text_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/history_team_info_background_color"
                    android:fontFamily="@font/seguisb"
                    android:gravity="center"
                    android:text="vs"
                    android:textColor="@color/history_team_name_text_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/history_teamB_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/history_team_info_background_color"
                    android:fontFamily="@font/seguisb"
                    android:gravity="center"
                    android:text="@string/teamB_name"
                    android:textColor="@color/history_team_name_text_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Score Section -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:background="@color/history_team_info_background_color"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/history_teamA_score"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/default_score"
                    android:textColor="@color/history_team_name_text_color"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/history_teamB_score"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/default_score"
                    android:textColor="@color/history_team_name_text_color"
                    android:textSize="30dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
        <!-- Score Layout -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/history_match_point_background_color"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/history_score_text"
                android:textColor="@color/history_team_name_text_color"
                android:textSize="16sp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:gravity="center" />
            <TextView
                android:id="@+id/history_match_point"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="0"
                android:textColor="@color/history_team_name_text_color"
                android:textSize="35sp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/history_match_point_type"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="Perfect match"
                android:textColor="@color/history_team_name_text_color"
                android:textSize="15sp"
                android:paddingLeft="8dp"
                android:paddingRight="4dp"
                android:gravity="left" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/history_external_line_separator"/>

</RelativeLayout>